[gd_scene load_steps=4 format=3 uid="uid://cpljxv55ms5cy"]

[ext_resource type="Script" path="res://scripts/level_map.gd" id="1_2mbpv"]
[ext_resource type="Theme" uid="uid://baw3uvd2gak5n" path="res://resources/Main.tres" id="1_anfl0"]
[ext_resource type="FontFile" uid="uid://dmw35ibqh0v47" path="res://resources/Pixelme.ttf" id="3_7rphq"]

[node name="LevelMap" type="Node2D"]
script = ExtResource("1_2mbpv")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 646.0
color = Color(0.607843, 0, 0.0784314, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
offset_left = 751.0
offset_top = 244.0
offset_right = 1151.0
offset_bottom = 444.0
theme = ExtResource("1_anfl0")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 10
metadata/_edit_use_anchors_ = true

[node name="StageDescription" type="Label" parent="PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme = ExtResource("1_anfl0")
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("3_7rphq")
text = "EXAMPLE TEXT to preview what this looks like"
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 184.0
offset_top = 528.0
offset_right = 312.0
offset_bottom = 568.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 50

[node name="Stage1" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = ExtResource("1_anfl0")

[node name="Stage2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = ExtResource("1_anfl0")

[node name="Stage3" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = ExtResource("1_anfl0")

[node name="Stage4" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
theme = ExtResource("1_anfl0")
disabled = true

[connection signal="mouse_entered" from="HBoxContainer/Stage1" to="." method="_on_stage_1_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Stage1" to="." method="_on_stage_1_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/Stage2" to="." method="_on_stage_2_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Stage2" to="." method="_on_stage_2_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/Stage3" to="." method="_on_stage_3_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Stage3" to="." method="_on_stage_3_mouse_exited"]
[connection signal="mouse_entered" from="HBoxContainer/Stage4" to="." method="_on_stage_4_mouse_entered"]
[connection signal="mouse_exited" from="HBoxContainer/Stage4" to="." method="_on_stage_4_mouse_exited"]
